# uv-python-template

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yaml  pyproject.toml
src/: main.py
src/my_svc/: logging_utils.py  main.py
tests/: test_main.py
